Add solution hw-10

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 .idea/
 *.pyc
 2023-spring/homeworks-practice/catboost_info/
+2023-spring/homeworks-practice/homework-practice-10-unsupervised/bbc-news-data.csv
+2023-spring/homeworks-practice/homework-practice-10-unsupervised/transport.xlsx
