--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 2023-spring/homeworks-practice/catboost_info/
 2023-spring/homeworks-practice/homework-practice-10-unsupervised/bbc-news-data.csv
 2023-spring/homeworks-practice/homework-practice-10-unsupervised/transport.xlsx
+2023-spring/homeworks-practice/homework-practice-11-imbalanced/creditcard.csv
+2023-spring/homeworks-practice/homework-practice-11-imbalanced/creditcard.csv.zip
