Add solution hw-12

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 2023-spring/homeworks-practice/homework-practice-10-unsupervised/transport.xlsx
 2023-spring/homeworks-practice/homework-practice-11-imbalanced/creditcard.csv
 2023-spring/homeworks-practice/homework-practice-11-imbalanced/creditcard.csv.zip
+2023-spring/homeworks-practice/homework-practice-12-metric-learning/*.jpeg
+2023-spring/homeworks-practice/homework-practice-12-metric-learning/embeddings
+2023-spring/homeworks-practice/homework-practice-12-metric-learning/catboost_info
